--- a/index.html
+++ b/index.html
@@ -25,7 +25,6 @@
       <li><a href="#">Contact</a></li>
     </ul>
   </nav>
-  <button class="hire-btn">Hire Me</button>
 </header>
 
 <section id="home">
@@ -62,59 +61,95 @@
 
   <main>
 
-    <div>
-      <img src="/Images/End-user.jpg" alt="End-user support image" width="400px" height="450px">
+    <section id="exper">
+  <div class="exper-container">
+    <div class="exper-image">
+      <img src="/Images/End-user.jpg" alt="End-user support image" width="400" height="450">
+    </div>
+    <div class="exper-text">
       <h4>My success work</h4>
-      <h3>ICT Support </h3>
+      <h3>ICT Support</h3>
       <h5>KEBS-Kisumu</h5>
       <ul>
         <li>Troubleshot and maintained networks, reducing downtime incidents by 30% through monitoring
-        and timely resolution. </li>
+        and timely resolution.</li>
         <li>Collaborated with senior ICT officers on infrastructure projects, gaining practical expertise and
-        enhancing team efficiency</li>
+        enhancing team efficiency.</li>
         <li>Strictly followed safety protocols and ICT policies, contributing to zero safety incidents during
         network installations.</li>
         <li>Provided technical support to more than 15 staff members, increasing resolution speed and
         boosting user satisfaction by 40%.</li>
         <li>Assisted in configuring routers, switches, and wireless access points, which enhanced system
-        security and stability </li>
+        security and stability.</li>
       </ul>
-      
     </div>
+  </div>
+</section>
 
-    <div>
+<section id="skills">
+  <div>
       <h2>What i can do</h2>
-      <dl>
-        <dt>Networking</dt>
-        <dd>Network installations, configuration and troubleshooting</dd>
-        <dt>Hardware</dt>
-        <dd>Maintenance</dd>
-        <dt>Software</dt>
-        <dd>Installation</dd>
-        <dt>Security</dt>
-        <dd>Firewalls</dd>
-        <dt>Cloud</dt>
-        <dd>AWS</dd>
-        <dt>Soft Skills</dt>
-        <dd>Problem-solving, Team-player, Adaptive, Communication</dd>
+      <dl class="skills-grid">
+        <div class="s_skill">
+          <dt>Networking</dt>
+          <dd>Network installations, configuration and troubleshooting</dd>
+        </div>
+        <div class="s_skill">
+          <dt>Hardware</dt>
+          <dd>Maintenance</dd>
+        </div>
+        <div class="s_skill">
+          <dt>Software</dt>
+          <dd>Installation</dd>
+        </div>
+        <div class="s_skill">
+          <dt>Security</dt>
+          <dd>Firewalls</dd>
+        </div>
+        <div class="s_skill">
+          <dt>Cloud</dt>
+          <dd>AWS</dd>
+        </div>
+        <div class="s_skill">
+          <dt>Soft Skills</dt>
+          <dd>Problem-solving, Team-player, Adaptive, Communication</dd>
+        </div>
       </dl>
     </div>
 
-    <div>
-      <h2>Projects</h2>
-      <h3>Portfolio</h3>
-      <p>A static webapp showcasing about myself and mys skills built with html, css and bootstrap library</p>
-    </div>
+</section>
 
-    <div>
-      <h2>Education & certifications</h2>
-      <div>
-        <h4>Bachelor of Business and Information Technology</h4>
-      </div>
-      <div>
-        <h4>AWS Cloud computing</h4>
-      </div>
-    </div>
+    <div id="education">
+  <h2>Education & Certifications</h2>
+  <table class="edu-table">
+    <tr>
+      <th>Accomplishment</th>
+      <th>Details</th>
+    </tr>
+    <tr>
+      <td>Bachelor of Business and Information Technology</td>
+      <td><button class="toggle-btn">+</button></td>
+    </tr>
+    <tr class="details-row">
+      <td colspan="2">
+        <strong>Where:</strong> Maseno University <br>
+        <strong>When:</strong> Expected Dec 2025
+      </td>
+    </tr>
+
+    <tr>
+      <td>AWS Cloud Computing</td>
+      <td><button class="toggle-btn">+</button></td>
+    </tr>
+    <tr class="details-row">
+      <td colspan="2">
+        <strong>Where:</strong> Amazon Web Services (Online Training) <br>
+        <strong>When:</strong> 2024
+      </td>
+    </tr>
+  </table>
+</div>
+
 
     <section>
       <h2>Contact me</h2>
@@ -123,7 +158,7 @@
         <label for="mail">Email:</label>
         <input type="email" id="mail" name="mail"><br>
         <label for="message">Message:</label>
-        <textarea row="5" col="100" name="message" id="message">
+        <textarea rows="5" cols="100" name="message" id="message">
         </textarea>
         <button>Send Message</button>
       </form>
@@ -134,7 +169,7 @@
   <footer>
 
   </footer>
-  
+<script src="script.js"></script>
 </body>
 </html>
     
